blur not workin

--- a/cleaned_otsu_thresholding.ipynb
+++ b/cleaned_otsu_thresholding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "#ALL USED FUNCTIONS\n",
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "#PIPELINE (until the end)\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def is_blurry(image):\n",
@@ -348,20 +348,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "121.89208553231896\n"
+      "0.24322386814089836\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\matteo\\anaconda3\\envs\\tub\\lib\\site-packages\\napari\\_qt\\qt_event_loop.py:284: FutureWarning: \n",
+      "The 'gui_qt()' context manager is deprecated.\n",
+      "If you are running napari from a script, please use 'napari.run()' as follows:\n",
+      "\n",
+      "    import napari\n",
+      "\n",
+      "    viewer = napari.Viewer()  # no prior setup needed\n",
+      "    # other code using the viewer...\n",
+      "    napari.run()\n",
+      "\n",
+      "In IPython or Jupyter, 'napari.run()' is not necessary. napari will automatically\n",
+      "start an interactive event loop for you: \n",
+      "\n",
+      "    import napari\n",
+      "    viewer = napari.Viewer()  # that's it!\n",
+      "\n",
+      "  warn(\n",
+      "WARNING: QWindowsWindow::setGeometry: Unable to set geometry 2172x1352+0+6 (frame: 2194x1408-11-39) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 2172x1104+0+6 (frame: 2194x1160-11-39) margins: 11, 45, 11, 11 minimum size: 374x552 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1160 maxtrack=0,0)\n",
+      "16-Jan-23 19:12:23 - vispy    - WARNING  - QWindowsWindow::setGeometry: Unable to set geometry 2172x1352+0+6 (frame: 2194x1408-11-39) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 2172x1104+0+6 (frame: 2194x1160-11-39) margins: 11, 45, 11, 11 minimum size: 374x552 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1160 maxtrack=0,0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.0012499220827792553\n"
      ]
     }
    ],
    "source": [
-    "img=smear[673]\n",
+    "img=smear[800]\n",
     "#a=is_blurry2(img)\n",
     "b=is_blurry(img)\n",
+    "edges= sobel(img)\n",
+    "print(edges.mean()/img.mean())\n",
+    "\n",
+    "visualize_all_list_napari([img,edges],[\"og\",\"edges\"])\n",
     "#print(a)\n",
     "print(b)"
    ],
@@ -371,7 +407,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "200-  111.6-- 0.34\n",
+    "673- 124--0.241"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "def sobel(img):\n",
+    "    scale=1\n",
+    "    delta=0\n",
+    "    depth= cv.CV_16S\n",
+    "\n",
+    "    grad_x = cv.Sobel(img, depth, 1, 0, ksize=3, scale=scale, delta=delta, borderType=cv.BORDER_DEFAULT)\n",
+    "    grad_y = cv.Sobel(img, depth, 0, 1, ksize=3, scale=scale, delta=delta, borderType=cv.BORDER_DEFAULT)\n",
+    "    abs_grad_x = cv.convertScaleAbs(grad_x)\n",
+    "    abs_grad_y = cv.convertScaleAbs(grad_y)\n",
+    "    grad = cv.addWeighted(abs_grad_x, 0.5, abs_grad_y, 0.5, 0)\n",
+    "    return grad"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -1750,7 +1819,7 @@
     "for i in range(2,g.shape[0]):\n",
     "    print(i)\n",
     "    if i % 11 ==0:\n",
-    "       new_smear = np.concatenate((new_smear, [smear[f[i]]]), axis= 0)\n",
+    "        new_smear = np.concatenate((new_smear, [smear[f[i]]]), axis= 0)\n",
     "\n"
    ],
    "metadata": {
@@ -1759,148 +1828,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "(124, 2048, 1504)\n",
-      "66.25414263681792\n",
-      "89.71273171783196\n",
-      "97.91733328503642\n",
-      "105.22798458705155\n",
-      "107.92495031303163\n",
-      "109.27225900983272\n",
-      "109.5807952270254\n",
-      "109.64793838096985\n",
-      "109.6691118153768\n",
-      "109.70391125104352\n",
-      "109.72216833775985\n",
-      "109.73492449349563\n",
-      "109.75660571650107\n",
-      "109.76467811104939\n",
-      "109.77382080004271\n",
-      "109.78299785791202\n",
-      "109.79151946210142\n",
-      "109.80326938845403\n",
-      "109.80946654719703\n",
-      "109.82128842679609\n",
-      "109.8286437887224\n",
-      "109.83639179179357\n",
-      "109.84835374442028\n",
-      "109.85610011801298\n",
-      "109.8672908543245\n",
-      "109.87912254422388\n",
-      "109.88415379820643\n",
-      "109.89174727543394\n",
-      "109.8997893737215\n",
-      "109.90499278177155\n",
-      "109.90989604867747\n",
-      "109.91992800272583\n",
-      "109.92629662734046\n",
-      "109.93205605692175\n",
-      "109.93962955662754\n",
-      "109.94712290636197\n",
-      "109.95420525296603\n",
-      "109.96127403335792\n",
-      "109.96652476474047\n",
-      "109.97467070123155\n",
-      "109.979711033972\n",
-      "109.98556873106494\n",
-      "109.99867867298111\n",
-      "110.00251117766763\n",
-      "110.01170020984014\n",
-      "110.02021223199273\n",
-      "110.0251488317866\n",
-      "110.03494551631296\n",
-      "110.03830388503306\n",
-      "110.04795694597989\n",
-      "110.05339662344251\n",
-      "110.06431383254882\n",
-      "110.0698911135783\n",
-      "110.07537162512111\n",
-      "110.09080713726378\n",
-      "110.10403216738467\n",
-      "110.11213514649107\n",
-      "110.1215509234084\n",
-      "110.13768321616423\n",
-      "110.15190275505506\n",
-      "110.16142502751778\n",
-      "110.17361663708934\n",
-      "110.18242233998727\n",
-      "110.18852108098795\n",
-      "110.19971435034117\n",
-      "110.21038429630262\n",
-      "110.21623847973729\n",
-      "110.23160375526037\n",
-      "110.24350447382436\n",
-      "110.25341862826616\n",
-      "110.27204903272184\n",
-      "110.29436151575585\n",
-      "110.30253903072268\n",
-      "110.32163533467309\n",
-      "110.34878520662211\n",
-      "110.3703537290311\n",
-      "110.39256379351004\n",
-      "110.40643700686005\n",
-      "110.42915511415742\n",
-      "110.4428874577346\n",
-      "110.45950954479842\n",
-      "110.48220748102194\n",
-      "110.50348688750454\n",
-      "110.52393254191848\n",
-      "110.54299444075632\n",
-      "110.56472604388864\n",
-      "110.58543135847006\n",
-      "110.6109536720939\n",
-      "110.63716823745895\n",
-      "110.656640162226\n",
-      "110.6912183783971\n",
-      "110.72971641998775\n",
-      "110.76111164208955\n",
-      "110.80075959604183\n",
-      "110.82719170894565\n",
-      "110.86592534940029\n",
-      "110.90858725163352\n",
-      "110.95655291733513\n",
-      "110.9739840006729\n",
-      "110.99753843457341\n",
-      "111.03835480722013\n",
-      "111.0934682144246\n",
-      "111.15706148355294\n",
-      "111.20647694593333\n",
-      "111.24769348409822\n",
-      "111.28680073590394\n",
-      "111.36054512348262\n",
-      "111.43539991231773\n",
-      "111.52283048605678\n",
-      "111.58919573218373\n",
-      "111.66442541088155\n",
-      "111.7804947103535\n",
-      "111.90232291009326\n",
-      "112.03603222405052\n",
-      "112.10496198885285\n",
-      "112.19442699636168\n",
-      "112.30148904487781\n",
-      "112.40977885196764\n",
-      "112.4620578505419\n",
-      "112.65594806843335\n",
-      "112.85830530589402\n",
-      "112.95168868042148\n",
-      "113.12371102441628\n",
-      "113.33176646892834\n",
-      "113.64494659891714\n",
-      "114.09858895422082\n",
-      "114.39604914579968\n",
-      "114.97839487333694\n",
-      "115.67329038227982\n",
-      "117.62789637591807\n",
-      "118.29596069805321\n",
-      "119.76343171589683\n",
-      "121.89208553231896\n",
-      "125.60981854839874\n",
-      "132.5705731902253\n"
+      "-0.02257521609042553\n",
+      "-0.006231429729055851\n",
+      "-0.004865281125332447\n",
+      "-0.004264019905252659\n",
+      "-0.0037413252160904257\n",
+      "-0.003349466526761968\n",
+      "-0.002862808552194149\n",
+      "-0.0026215898229720743\n",
+      "-0.0025475684632646277\n",
+      "-0.0023790724734042553\n",
+      "-0.0022709623296210107\n",
+      "-0.0021826561461103723\n",
+      "-0.002107336166057181\n",
+      "-0.002044677734375\n",
+      "-0.0019355936253324468\n",
+      "-0.0018294314120678192\n",
+      "-0.0017479429853723405\n",
+      "-0.0016703504197140956\n",
+      "-0.0016096399185505318\n",
+      "-0.0015749018243018617\n",
+      "-0.001529774767287234\n",
+      "-0.0014336768617021277\n",
+      "-0.0013564089511303192\n",
+      "-0.001306412067819149\n",
+      "-0.0012499220827792553\n",
+      "-0.0012054443359375\n",
+      "-0.0011359681474401595\n",
+      "-0.0010687645445478723\n",
+      "-0.001026234728224734\n",
+      "-0.0009934445644946808\n",
+      "-0.0009626023312832447\n",
+      "-0.0009015671750332447\n",
+      "-0.0008577387383643617\n",
+      "-0.0008184554729055851\n",
+      "-0.0007590435920877659\n",
+      "-0.0007359930809507978\n",
+      "-0.0007067741231715426\n",
+      "-0.0006726853390957447\n",
+      "-0.0006483362076130319\n",
+      "-0.0006226884557845745\n",
+      "-0.0005866517411901596\n",
+      "-0.0005463945104720745\n",
+      "-0.0005327589968417553\n",
+      "-0.0004993195229388297\n",
+      "-0.00045906229222074466\n",
+      "-0.0004340638505651596\n",
+      "-0.00039120937915558513\n",
+      "-0.00038017110621675534\n",
+      "-0.00034705628740026596\n",
+      "-0.0003110195728058511\n",
+      "-0.00029381285322473404\n",
+      "-0.00024251734956781914\n",
+      "-0.00020875322057845743\n",
+      "-0.00017466443650265959\n",
+      "-0.00015063996010638298\n",
+      "-0.00012369358793218086\n",
+      "-0.00011135669464760639\n",
+      "-9.804583610372341e-05\n",
+      "-6.882687832446808e-05\n",
+      "-1.9803960272606383e-05\n",
+      "5.194481382978723e-06\n",
+      "2.7271027260638297e-05\n",
+      "4.2529816323138297e-05\n",
+      "8.148842669547872e-05\n",
+      "0.00010811014378324468\n",
+      "0.00013343324052526596\n",
+      "0.00015486047623005319\n",
+      "0.00017596305684840425\n",
+      "0.00020648063497340425\n",
+      "0.0002658925157912234\n",
+      "0.00029705940408909575\n",
+      "0.0003204345703125\n",
+      "0.00033504404920212767\n",
+      "0.00037335334940159575\n",
+      "0.00040646816821808513\n",
+      "0.00042659678357712767\n",
+      "0.00045386781083776596\n",
+      "0.0004752950465425532\n",
+      "0.0004989948678523936\n",
+      "0.0005106824509640958\n",
+      "0.0005454205452127659\n",
+      "0.0005752888131648936\n",
+      "0.0006080789768949468\n",
+      "0.0006262596617353723\n",
+      "0.0006519074135638297\n",
+      "0.0006710620636635638\n",
+      "0.0006967098154920212\n",
+      "0.0007223575673204788\n",
+      "0.0007346944606050532\n",
+      "0.0007639134183843085\n",
+      "0.0007879378947805851\n",
+      "0.0008204034034242022\n",
+      "0.0008544921875\n",
+      "0.0008879316614029255\n",
+      "0.0009223451005651596\n",
+      "0.0009681214677526596\n",
+      "0.0009892240483710107\n",
+      "0.0010041581823470745\n",
+      "0.0010473373088430852\n",
+      "0.0010921397107712767\n",
+      "0.0011164888422539893\n",
+      "0.0011473310754654255\n",
+      "0.0011726541722074468\n",
+      "0.0012203784699135638\n",
+      "0.0012918025889295214\n",
+      "0.0013145284449800532\n",
+      "0.0013499158494015956\n",
+      "0.001386601874168883\n",
+      "0.0014330275515292553\n",
+      "0.0014775052983710107\n",
+      "0.0015158145985704786\n",
+      "0.001581070270944149\n",
+      "0.0016206781914893617\n",
+      "0.0016869078291223405\n",
+      "0.0017492416057180852\n",
+      "0.0018187177942154255\n",
+      "0.0019229320769614362\n",
+      "0.0020109136053856383\n",
+      "0.0020816884142287233\n",
+      "0.0021352565034906913\n",
+      "0.002201161486037234\n",
+      "0.0022901169797207447\n",
+      "0.0023599178233045214\n",
+      "0.0024881565824468087\n",
+      "0.002601785862699468\n",
+      "0.0026868454953457447\n",
+      "0.0028813138921210107\n",
+      "0.0031017546958111704\n",
+      "0.0033488172165890956\n",
+      "0.0035900359458111704\n",
+      "0.004134482525764627\n",
+      "0.004650034803025266\n",
+      "0.005754511407081117\n",
+      "0.008050472178357714\n",
+      "0.01227488416306516\n"
      ]
     },
     {
@@ -1924,8 +1993,8 @@
       "    viewer = napari.Viewer()  # that's it!\n",
       "\n",
       "  warn(\n",
-      "WARNING: QWindowsWindow::setGeometry: Unable to set geometry 2172x1352+12+46 (frame: 2194x1408+1+1) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 1924x1102+12+46 (frame: 1946x1158+1+1) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n",
-      "15-Jan-23 11:09:42 - vispy    - WARNING  - QWindowsWindow::setGeometry: Unable to set geometry 2172x1352+12+46 (frame: 2194x1408+1+1) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 1924x1102+12+46 (frame: 1946x1158+1+1) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n"
+      "WARNING: QWindowsWindow::setGeometry: Unable to set geometry 2172x1352+0+20 (frame: 2194x1408-11-25) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 2172x1104+0+20 (frame: 2194x1160-11-25) margins: 11, 45, 11, 11 minimum size: 374x552 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1160 maxtrack=0,0)\n",
+      "16-Jan-23 18:48:18 - vispy    - WARNING  - QWindowsWindow::setGeometry: Unable to set geometry 2172x1352+0+20 (frame: 2194x1408-11-25) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 2172x1104+0+20 (frame: 2194x1160-11-25) margins: 11, 45, 11, 11 minimum size: 374x552 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1160 maxtrack=0,0)\n"
      ]
     }
    ],
